# loongsonAIOT

./: README.md
1c102/1cfirst/: laide.makefile
1c102/1cfirst/src/: dht11.c  dht11.h  mq9.c  mq9.h  oled.c  oled.h  oledfont.h  uart0.c  uart0.h
1c102/1cfirst/src/wifi_test/: lora.c  lora.h
1c102/1cfirst/system/: init.c
1c102/1cfirst/user/ls1c102/: 1c102_Interrupt.c  1c102_main.c
2k1000/2k1000/: can.cpp  can.h  can.ui  finall_prj.pro  finall_prj.pro.user.befa1df  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oscilloscope.cpp  oscilloscope.h  oscilloscope.ui  record.cpp  record.h  record.ui  res.qrc  sys_status.cpp  sys_status.h  sys_status.ui  上位机.pptx
2k1000/camera_receiver_ipv6/: camera_receiver_ipv6.cpp
2k300/: CMakeLists.txt  main.cpp
